cmake_minimum_required(VERSION 3.16)

project(cutemockserver VERSION 0.1 LANGUAGES CXX)

find_package(Qt5 COMPONENTS Network Test REQUIRED)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

if(NOT DEFINED CMAKE_RUNTIME_OUTPUT_DIRECTORY)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
endif()
if(NOT DEFINED BUILD_CUTE_MOCK_SERVER_TESTS)
    set(BUILD_CUTE_MOCK_SERVER_TESTS ON)
endif()

add_subdirectory(lib)
if (BUILD_CUTE_MOCK_SERVER_TESTS)
    add_subdirectory(tests)
endif()
